# blockLLM

./: .gitignore  .torchrun_main.py.swp  README.md  pyproject.toml  requirements.txt  utils.py
blockllm_torch/: __init__.py  blockllm.py  utils.py
examples/: dataset.py  train_wikitext.py
