[tool.poetry]
name = "poetry init"
version = "0.1.0"
description = ""
authors = ["mdfarhanali34 <farhandxb96@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
transformers = "^4.49.0"
bitsandbytes = "^0.45.3"
datasets = "^3.3.2"
loguru = "^0.7.3"
matplotlib = "^3.10.1"
galore-torch = "^1.0"
pandas = "^2.2.3"
accelerate = "^1.5.1"
trl = "^0.15.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

